=== 0.4.0 / 2009-??-??

* 0.4.0 alpha
  * Use camel case for a generated module name.
* 0.3.3 (rev.218)
  * Support C-like comment.
  * Optimize for speed.
  * Bug fixes.
* 0.3.2 (rev.185)
  * Bug fixes.
* 0.3.1 fixed bugs concerning RPC (rev.146)
* 0.3.0 RPC is available (rev.124)
  * RPC is available
  * New compiler using racc (ruby version of yacc)
  * Rename `sample' directory to `example'
* 0.2.1 extensions and import are available (rev.82)
* 0.2.0 introduce descriptor (rev.75)
  * Message structures can be restored from encoded data by means a descriptor object
* 0.1.0 fixed a small bug
* 0.0.1 major enhancement
  * Birthday!