@@ -14,8 +14,16 @@ module Protobuf
         next unless message.has_field?(field.name)
 
         if field.repeated?
-          value.each do |val|
-            write_pair(stream, field, val)
+          if field.packed?
+            key = (field.tag << 3) | WireType::LENGTH_DELIMITED
+            packed_value = value.map {|val| field.encode(val) }.join
+            stream.write(Field::VarintField.encode(key))
+            stream.write(Field::VarintField.encode(packed_value.size))
+            stream.write(packed_value)
+          else
+            value.each do |val|
+              write_pair(stream, field, val)
+            end
           end
         else
           write_pair(stream, field, value)
@@ -26,7 +34,7 @@ module Protobuf
     # Encode key and value, and write to +stream+.
     def write_pair(stream, field, value)
       key = (field.tag << 3) | field.wire_type
-      key_bytes = Protobuf::Field::VarintField.encode(key)
+      key_bytes = Field::VarintField.encode(key)
       stream.write(key_bytes)
       bytes = field.encode(value)
       stream.write(bytes)
